src/objects/Direct_Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>Account_Link__c</fullName>
        <formula>&quot;https://na5.salesforce.com/&quot;&amp;Account_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Onboardings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Name__r.Owner.FirstName&amp;&quot; &quot;&amp; Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RPSM__c</fullName>
        <formula>Account_Name__r.Owner.RPSM_New__r.FirstName &amp;&quot; &quot;&amp; Account_Name__r.Owner.RPSM_New__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Account_Zone__c</fullName>
        <label>Approved Shop Zone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Price_1__c</fullName>
        <description>Competitor</description>
        <label>Competitor Price 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Price_2__c</fullName>
        <description>Competitor</description>
        <label>Competitor Price 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_1__c</fullName>
        <description>Competitor</description>
        <label>Competitor Product Name 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_2__c</fullName>
        <description>Competitor</description>
        <label>Competitor Product Name 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Amount__c</fullName>
        <label>Credit Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Req_Terms__c</fullName>
        <label>Type of Credit Required</label>
        <picklist>
            <picklistValues>
                <fullName>NTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <label>Current Supplier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Capabilities__c</fullName>
        <inlineHelpText>Do we have the capabilities to deliver to their location from our DTP?</inlineHelpText>
        <label>Is This Account w/in 75Mi of a DC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Revenue__c</fullName>
        <formula>Account_Name__r.Estimated_Annual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geographic_Coverage__c</fullName>
        <label>Geographic Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <inlineHelpText>Related to Price Adjustments</inlineHelpText>
        <label>Lead Time For Price Adjustments</label>
        <picklist>
            <picklistValues>
                <fullName>0 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locations_by_Project__c</fullName>
        <label>Number of locations by Project</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <formula>TEXT(Account_Name__r.Market_Segment__c)</formula>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <label>Market Sub Segment</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Masco_Subsidiary__c</fullName>
        <label>Is This a Masco Subsidiary</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Zone__c</fullName>
        <formula>MAX( IF( ISPICKVAL( Requested_Shop_Zone__c , &quot;1&quot;), 1,IF( ISPICKVAL( Requested_Shop_Zone__c , &quot;2&quot;), 2,IF( ISPICKVAL( Requested_Shop_Zone__c , &quot;3&quot;), 3,IF( ISPICKVAL( Requested_Shop_Zone__c , &quot;4&quot;), 4,IF( ISPICKVAL( Requested_Shop_Zone__c , &quot;5&quot;), 5,IF( ISPICKVAL( Requested_Shop_Zone__c , &quot;6&quot;), 6,7)))))),  Off_zone_calculation_1__c , Off_zone_calculation_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_Credit_App__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Need Credit App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Yr_in_Business__c</fullName>
        <label># of years in Business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Explanation__c</fullName>
        <label>OEM Explanation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Opportunity__c</fullName>
        <label>OEM Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Off_zone_calculation_1__c</fullName>
        <formula>If(Product_1_Off_Zone__c = 0,Prod_1_zone_calc__c,If(Product_1_Off_Zone__c &lt; Product_1__r.Zone7__c,8 ,If( Product_1_Off_Zone__c &gt;= Product_1__r.Zone1__c, 1, If( Product_1_Off_Zone__c &gt;= Product_1__r.Zone2__c, 2,If( Product_1_Off_Zone__c &gt;= Product_1__r.Zone3__c, 3,If(Product_1_Off_Zone__c &gt;= Product_1__r.Zone4__c,4,if(Product_1_Off_Zone__c &gt;= Product_1__r.Zone5__c,5,If( Product_1_Off_Zone__c &gt;= Product_1__r.Zone6__c, 6,If( Product_1_Off_Zone__c = Product_1__r.Zone7__c, 7,Prod_1_zone_calc__c)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off zone calculation 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_zone_calculation_2__c</fullName>
        <formula>If(Product_2_Off_Zone__c = 0,Prod_2_zone_calc__c,IF( Product_2_Off_Zone__c &lt; Product_2__r.Zone7__c, 8,If( Product_2_Off_Zone__c &gt;= Product_2__r.Zone1__c, 1, If( Product_2_Off_Zone__c &gt;= Product_2__r.Zone2__c, 2,If( Product_2_Off_Zone__c &gt;= Product_2__r.Zone3__c, 3,If(Product_2_Off_Zone__c &gt;= Product_2__r.Zone4__c,4,if(Product_2_Off_Zone__c &gt;= Product_2__r.Zone5__c,5,If( Product_2_Off_Zone__c &gt;= Product_2__r.Zone6__c, 6,If( Product_2_Off_Zone__c = Product_2__r.Zone7__c, 7,Prod_2_zone_calc__c
)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off zone calculation 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboard_Address_Line_1__c</fullName>
        <formula>Account_Name__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_City__c</fullName>
        <formula>Account_Name__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_Postal__c</fullName>
        <formula>Account_Name__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_State__c</fullName>
        <formula>Account_Name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Frequency__c</fullName>
        <label>Order Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Requested Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Cash in advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Account_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor1__c</fullName>
        <label>Primary Competitor 1</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburgh/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor_2__c</fullName>
        <label>Primary Competitor 2</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburgh/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Direct Onboardings</relationshipLabel>
        <relationshipName>Account_Onboardings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Supplier_Non_Behr__c</fullName>
        <description>Primary supplier to fetch it from corresponding Account</description>
        <formula>TEXT(Account_Name__r.Current_Supplier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Supplier (Non Behr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_1_zone_calc__c</fullName>
        <formula>IF( ISPICKVAL( Product_1_Zone__c , &quot;1&quot;), 1, IF( ISPICKVAL( Product_1_Zone__c , &quot;2&quot;), 2,IF( ISPICKVAL( Product_1_Zone__c , &quot;3&quot;), 3,IF( ISPICKVAL( Product_1_Zone__c , &quot;4&quot;), 4,IF( ISPICKVAL( Product_1_Zone__c , &quot;5&quot;), 5,IF( ISPICKVAL( Product_1_Zone__c , &quot;6&quot;), 6,IF( ISPICKVAL( Product_1_Zone__c , &quot;7&quot;), 7,1)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prod 1 zone calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_2_zone_calc__c</fullName>
        <formula>IF( ISPICKVAL( Product_2_Zone__c , &quot;1&quot;), 1, IF( ISPICKVAL( Product_2_Zone__c , &quot;2&quot;), 2,IF( ISPICKVAL( Product_2_Zone__c , &quot;3&quot;), 3,IF( ISPICKVAL( Product_2_Zone__c , &quot;4&quot;), 4,IF( ISPICKVAL( Product_2_Zone__c , &quot;5&quot;), 5,IF( ISPICKVAL( Product_2_Zone__c , &quot;6&quot;), 6,IF( ISPICKVAL( Product_2_Zone__c , &quot;7&quot;), 7,1)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prod_2_zone_calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_Off_Zone__c</fullName>
        <inlineHelpText>Populate only if off zone pricing is needed</inlineHelpText>
        <label>Crossover Product 1 Off Zone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_1_Price__c</fullName>
        <formula>If(ISPICKVAL(Product_1_Zone__c , &quot;Off Zone&quot;),  Product_1_Off_Zone__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;1&quot;),  Product_1__r.Zone1__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;2&quot;),  Product_1__r.Zone2__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;3&quot;),  Product_1__r.Zone3__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;4&quot;),  Product_1__r.Zone4__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;5&quot;),  Product_1__r.Zone5__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;6&quot;),  Product_1__r.Zone6__c , 
If (ISPICKVAL(Product_1_Zone__c , &quot;7&quot;),  Product_1__r.Zone7__c , 0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crossover Product 1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_1_Zone__c</fullName>
        <label>Crossover Product 1 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Zone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Behr/Kilz Crossover Product 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Direct Onboardings</relationshipLabel>
        <relationshipName>Direct_Onboardings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_1_used__c</fullName>
        <inlineHelpText>How often is this product used?</inlineHelpText>
        <label>Competitor % used 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_Off_Zone__c</fullName>
        <inlineHelpText>Populate only if off zone pricing is needed</inlineHelpText>
        <label>Crossover Product 2 Off Zone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_2_Zone__c</fullName>
        <label>Crossover Product 2 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Zone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Behr/Kilz Crossover Product 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Direct Onboardings (Product 2)</relationshipLabel>
        <relationshipName>Direct_Onboardings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_2_price__c</fullName>
        <formula>If(ISPICKVAL(Product_2_Zone__c , &quot;Off Zone&quot;), Product_2_Off_Zone__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;1&quot;), Product_2__r.Zone1__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;2&quot;), Product_2__r.Zone2__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;3&quot;), Product_2__r.Zone3__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;4&quot;), Product_2__r.Zone4__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;5&quot;), Product_2__r.Zone5__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;6&quot;), Product_2__r.Zone6__c , 
If (ISPICKVAL(Product_2_Zone__c , &quot;7&quot;), Product_2__r.Zone7__c , 0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crossover Product 2 price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_2_used__c</fullName>
        <description>Product 2 % used</description>
        <inlineHelpText>How often is this product used?</inlineHelpText>
        <label>Competitor % used 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Planned__c</fullName>
        <label>Project Planned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Potential_Amount__c</fullName>
        <label>Project Potential Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Rate_Per__c</fullName>
        <label>Project Rebate Rate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Rebate_Required__c</fullName>
        <label>Project Rebate Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Projected 1st Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Behr_Capture_Amount__c</fullName>
        <formula>Account_Name__r.Estimated_Annual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Behr Capture Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Behr_Capture_Percent__c</fullName>
        <label>Projected Behr Estimated Capture %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RPSM for approval of zone 1-3</description>
        <label>RPSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Direct_Onboardings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RVP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RVP Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RVP_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Onboardings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Shop_Zone__c</fullName>
        <label>Requested Shop Zone</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVP_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Onboardings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_approved_date__c</fullName>
        <description>date and time of sales approval (RPSM/RVP/SVP respectivly)</description>
        <label>Sales approved date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Size_of_Business__c</fullName>
        <label>Size of Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Date__c</fullName>
        <label>Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_of_information__c</fullName>
        <inlineHelpText>Please attach a competitor invoice or quote (if selected) to the &apos;notes &amp; attachments&apos; section&apos; once this page is saved.</inlineHelpText>
        <label>How did you receive pricing information</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RPSM Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RVP Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending SVP Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Credit Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Account Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Setup Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by RPSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_date__c</fullName>
        <description>date and time the order was submitted for approval</description>
        <label>Submit date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_Other__c</fullName>
        <inlineHelpText>Explanation for Credit Terms Outside of Guidelines</inlineHelpText>
        <label>Requested Payment Terms - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_comp_items__c</fullName>
        <description>rollup to allow for a validation that they have competitor products added</description>
        <label># of comp items</label>
        <summaryForeignKey>Competition__c.Direct_Onboarding__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Direct Onboarding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_RPSM__c</columns>
        <columns>RVP_User__c</columns>
        <columns>SVP_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_RPSM__c</columns>
        <columns>RVP_User__c</columns>
        <columns>SVP_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Account Setup Complete</value>
        </filters>
        <label>All - Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Not_submitted</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_RPSM__c</columns>
        <columns>RVP_User__c</columns>
        <columns>SVP_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted</value>
        </filters>
        <label>All - Not submitted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_inprogress</fullName>
        <columns>Status__c</columns>
        <columns>Need_Credit_App__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_RPSM__c</columns>
        <columns>RVP_User__c</columns>
        <columns>SVP_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Account Setup Complete,Not Submitted,Rejected by RVP,Rejected by Finance</value>
        </filters>
        <label>All - In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_inprogress_Finance</fullName>
        <columns>Status__c</columns>
        <columns>Need_Credit_App__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_RPSM__c</columns>
        <columns>RVP_User__c</columns>
        <columns>SVP_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Account Setup Complete,Not Submitted,Rejected by RVP,Rejected by Finance</value>
        </filters>
        <filters>
            <field>Need_Credit_App__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - In Progress - Need Credit app</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_inprogress_rev</fullName>
        <columns>Status__c</columns>
        <columns>Need_Credit_App__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_RPSM__c</columns>
        <columns>RVP_User__c</columns>
        <columns>SVP_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Account Setup Complete,Not Submitted,Rejected by RVP,Rejected by Finance</value>
        </filters>
        <filters>
            <field>Need_Credit_App__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Credit Review</value>
        </filters>
        <label>All - In Progress - Credit Review</label>
        <language>en_US</language>
    </listViews>
</CustomObject>